--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,35 @@
-#kitu{
-    color:
+#one{
+   height:600px;
+   width: 85%;
+   background-color: hsl(220, 15%, 55%);
+margin:20% 10%;
+display:flex;
+align-items: center;
+justify-content: center;
+}
+#white{
+   height:70%;
+   width:40% ;
+  background-color:white ;
+  border-radius: 5%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  
+
+}
+img{
+   height: 50%;
+   width: 90%;
+   margin: 5% 5%;
+   border-radius: 5%;
+}
+#text{
+   height: 40%;
+   width: 90%;
+   display: flex;
+   flex-direction: column;
+   font-size: 15px;
+   text-align: center;
+
 }
