--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
    height:600px;
    width: 85%;
    background-color: hsl(220, 15%, 55%);
-margin:5% 10%;
+margin:1.5% 10%;
 display:flex;
 align-items: center;
 justify-content: center;
@@ -31,5 +31,8 @@ img{
    flex-direction: column;
    font-size: 15px;
    text-align: center;
+   font-family:outfit ;
+
+
 
 }
